--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="no_internet">No Internet</string>
     <string name="no_internet_desc">Please check your internet connection</string>
     <string name="stars">stars</string>
+    <string name="back">Back</string>
 </resources>
